--- a/index.html
+++ b/index.html
@@ -20,11 +20,17 @@
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 
   <link rel="stylesheet" href="css/styles.css?v=1.0">
+  
+  <!-- 1st line -->
+  <script src="https://cdn.babylonjs.com/viewer/babylon.viewer.js"></script>
 
 </head>
 
 <body>
   <!-- your content here... -->
   <script src="js/scripts.js"></script>
+  
+  <!-- -->
+  <babylon model="Path to File"></babylon>
 </body>
 </html>
