--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   <script src="js/scripts.js"></script>
   
   <!-- -->
-  <babylon model="Path to File"></babylon>
+  <babylon model="./2020_chevy_corvette_c8.glb"></babylon>
 </body>
 </html>
