--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <!-- your content here... -->
   <script src="js/scripts.js"></script>
   
-  <!-- -->
+  <!-- 2nd line -->
   <babylon model="./2020_chevy_corvette_c8.glb"></babylon>
 </body>
 </html>
