--- a/index.html
+++ b/index.html
@@ -57,12 +57,24 @@
         var createScene = function () {
     // This creates a basic Babylon Scene object (non-mesh)
     var scene = new BABYLON.Scene(engine);
+    scene.useRightHandedSystem = false;
+
+    BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/Wagisigu/babylon/main/Assets/Models/parking_garage_free_download/", "scene.gltf", scene, function (meshes) {
+        meshes.forEach(function (mesh) {
+            mesh.scaling = new BABYLON.Vector3(1,1,1);
+        });
+    });
+    BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/Wagisigu/babylon/main/Assets/Models/cadillac_ct6_3d_model/", "scene.gltf", scene, function (meshes) {
+        meshes[0].movePOV(-4.25,-.7,-3.25);
+    });
+    BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/Wagisigu/babylon/main/Assets/Models/1970_chevrolet_camaro_pro_touring/", "scene.gltf", scene, function (meshes) {
+        meshes[0].movePOV(-1.25,.5,-2);
+        meshes[0].scaling = new BABYLON.Vector3(.001, .001, .001);
+    });
 
     // This creates and positions a free camera (non-mesh)
-    var camera = new BABYLON.ArcRotateCamera("Camera", 0, 0, 10, new BABYLON.Vector3(0, 0, 0), scene);
-
-    // This targets the camera to scene origin
-    camera.setTarget(BABYLON.Vector3.Zero());
+    var camera = new BABYLON.ArcRotateCamera("Camera", 0, Math.PI * 3 / 8, 10, new BABYLON.Vector3(0, 0, 0), scene);
+    camera.upperBetaLimit = Math.PI / 2.2;
 
     // This attaches the camera to the canvas
     camera.attachControl(canvas, true);
@@ -72,9 +84,6 @@
 
     // Default intensity is 1. Let's dim the light a small amount
     light.intensity = 0.7;
-
-    // Our built-in 'ground' shape.
-    var ground = BABYLON.MeshBuilder.CreateGround("ground", {width: 6, height: 6}, scene);
 
     return scene;
 };
