--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         meshes[0].scaling = new BABYLON.Vector3(.001, .001, .001);
     });
 
+    var cameraTarget = new BABYLON.Vector3(-1.25,.5,-2);
+
     // This creates and positions a free camera (non-mesh)
     var camera = new BABYLON.ArcRotateCamera("Camera", Math.PI / 2, Math.PI * 3 / 8, 10, new BABYLON.Vector3(-1.25,.5,-2), scene);
     camera.upperBetaLimit = Math.PI / 2.2;
@@ -99,12 +101,69 @@
         }
     });
 
-
     // This creates a light, aiming 0,1,0 - to the sky (non-mesh)
     var light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), scene);
 
     // Default intensity is 1. Let's dim the light a small amount
     light.intensity = 0.7;
+
+    var advancedTexture = BABYLON.GUI.AdvancedDynamicTexture.CreateFullscreenUI("UI");
+
+    var UiP = new BABYLON.GUI.StackPanel("vertical");
+    UiP.top = "30%";
+    UiP.fontSize = "14px";
+    advancedTexture.addControl(UiP);
+
+    var UiPanel = new BABYLON.GUI.StackPanel("horizontal");
+    UiPanel.isVertical = false;
+    UiPanel.height = "100px";
+    UiP.addControl(UiPanel);
+
+    var leftButton = BABYLON.GUI.Button.CreateSimpleButton("leftButton", "<-");
+    leftButton.width = "100px";
+    leftButton.height = "50px";
+    leftButton.cornerRadius = 5;
+    leftButton.color = "white";
+    leftButton.background = "black";
+    leftButton.onPointerDownObservable.add(()=> {
+        cameraTarget = new BABYLON.Vector3(-1.25,.5,-2);
+    });
+    UiPanel.addControl(leftButton);
+
+    var rightButton = BABYLON.GUI.Button.CreateSimpleButton("rightButton", "->");
+    rightButton.width = "100px";
+    rightButton.height = "50px";
+    rightButton.cornerRadius = 5;
+    rightButton.color = "white";
+    rightButton.background = "black";
+    rightButton.onPointerDownObservable.add(()=> {
+        cameraTarget = new BABYLON.Vector3(-4.25,.5,-2);
+    });
+    UiPanel.addControl(rightButton);
+
+    var configureButton = BABYLON.GUI.Button.CreateSimpleButton("configureButton", "Configure");
+    configureButton.width = "100px";
+    configureButton.height = "50px";
+    configureButton.cornerRadius = 5;
+    configureButton.color = "white";
+    configureButton.background = "black";
+    UiP.addControl(configureButton);
+
+    scene.registerBeforeRender(function () {
+        if (Math.abs(cameraTarget.x - camera.target.x) > 0.05) {
+            var dx = 0;
+            if (cameraTarget.x > camera.target.x) {
+                dx = 0.05;
+            } else if (cameraTarget.x < camera.target.x) {
+                dx = -0.05;
+            }
+            camera.setTarget(new BABYLON.Vector3(camera.target.x+dx,.5,-2));
+            camera.alpha = Math.PI / 2;
+            camera.beta = Math.PI * 3 / 8;
+        } else {
+            camera.setTarget(cameraTarget);
+        }
+    });
 
     return scene;
 };
