--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         var scene = null;
         var sceneToRender = null;
         var createDefaultEngine = function() { return new BABYLON.Engine(canvas, true, { preserveDrawingBuffer: true, stencil: true,  disableWebGL2Support: false}); };
-        var createScene = function () {
+            var createScene = function () {
     // This creates a basic Babylon Scene object (non-mesh)
     var scene = new BABYLON.Scene(engine);
     scene.useRightHandedSystem = false;
@@ -72,6 +72,7 @@
         meshes[0].scaling = new BABYLON.Vector3(.001, .001, .001);
     });
 
+    var cameraMoving = false;
     var cameraTarget = new BABYLON.Vector3(-1.25,.5,-2);
 
     // This creates and positions a free camera (non-mesh)
@@ -82,6 +83,9 @@
     camera.lowerRadiusLimit = 4;
     camera.upperAlphaLimit = Math.PI * 3 / 4;
     camera.lowerAlphaLimit = Math.PI / 4;
+
+    camera.inputs.attached.pointers.multiTouchPanAndZoom = false;
+    camera.inputs.attached.pointers.multiTouchPanning = false;
 
     // This attaches the camera to the canvas
     camera.attachControl(canvas, true);
@@ -120,24 +124,24 @@
     UiP.addControl(UiPanel);
 
     var leftButton = BABYLON.GUI.Button.CreateSimpleButton("leftButton", "<-");
-    leftButton.width = "100px";
-    leftButton.height = "50px";
+    leftButton.paddingRightInPixels = 20;
     leftButton.cornerRadius = 5;
     leftButton.color = "white";
     leftButton.background = "black";
     leftButton.onPointerDownObservable.add(()=> {
         cameraTarget = new BABYLON.Vector3(-1.25,.5,-2);
+        cameraMoving = true;
     });
     UiPanel.addControl(leftButton);
 
     var rightButton = BABYLON.GUI.Button.CreateSimpleButton("rightButton", "->");
-    rightButton.width = "100px";
-    rightButton.height = "50px";
+    rightButton.paddingLeftInPixels = 20;
     rightButton.cornerRadius = 5;
     rightButton.color = "white";
     rightButton.background = "black";
     rightButton.onPointerDownObservable.add(()=> {
         cameraTarget = new BABYLON.Vector3(-4.25,.5,-2);
+        cameraMoving = true;
     });
     UiPanel.addControl(rightButton);
 
@@ -150,19 +154,31 @@
     UiP.addControl(configureButton);
 
     scene.registerBeforeRender(function () {
-        if (Math.abs(cameraTarget.x - camera.target.x) > 0.05) {
-            var dx = 0;
-            if (cameraTarget.x > camera.target.x) {
-                dx = 0.05;
-            } else if (cameraTarget.x < camera.target.x) {
-                dx = -0.05;
+        const viewport = camera.viewport.toGlobal(engine.getRenderWidth(), engine.getRenderHeight());
+        leftButton.width = viewport.width/5 + "px";
+        leftButton.height = viewport.width/10 + "px";
+        rightButton.width = viewport.width/5 + "px";
+        rightButton.height = viewport.width/10 + "px";
+
+        if (cameraMoving) {
+            if (Math.abs(cameraTarget.x - camera.target.x) > 0.05) {
+                var dx = 0;
+                if (cameraTarget.x > camera.target.x) {
+                    dx = 0.05;
+                } else if (cameraTarget.x < camera.target.x) {
+                    dx = -0.05;
+                }
+                camera.setTarget(new BABYLON.Vector3(camera.target.x+dx,.5,-2));
+                camera.alpha = Math.PI / 2;
+                camera.beta = Math.PI * 3 / 8;
+            } else {
+                camera.setTarget(cameraTarget);
+                camera.alpha = Math.PI / 2;
+                camera.beta = Math.PI * 3 / 8;
+                cameraMoving = false;
             }
-            camera.setTarget(new BABYLON.Vector3(camera.target.x+dx,.5,-2));
-            camera.alpha = Math.PI / 2;
-            camera.beta = Math.PI * 3 / 8;
-        } else {
-            camera.setTarget(cameraTarget);
         }
+
     });
 
     return scene;
