--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
 
     var cameraMoving = false;
     var cameraTarget = new BABYLON.Vector3(-1.25,.5,-2);
+    const cameraAlpha = Math.PI / 2;
+    const cameraBeta = Math.PI * 3 / 8;
 
     // This creates and positions a free camera (non-mesh)
     var camera = new BABYLON.ArcRotateCamera("Camera", Math.PI / 2, Math.PI * 3 / 8, 10, new BABYLON.Vector3(-1.25,.5,-2), scene);
@@ -107,9 +109,6 @@
 
     // This creates a light, aiming 0,1,0 - to the sky (non-mesh)
     var light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), scene);
-
-    // Default intensity is 1. Let's dim the light a small amount
-    light.intensity = 0.7;
 
     var advancedTexture = BABYLON.GUI.AdvancedDynamicTexture.CreateFullscreenUI("UI");
 
@@ -153,6 +152,60 @@
     configureButton.background = "black";
     UiP.addControl(configureButton);
 
+    function locationAdjustment() {    
+        if (Math.abs(cameraTarget.x - camera.target.x) > 0.05) {
+            var dx = 0;
+            if (cameraTarget.x > camera.target.x) {
+                dx = 0.05;
+            } else {
+                dx = -0.05;
+            }
+            camera.setTarget(new BABYLON.Vector3(camera.target.x+dx,.5,-2));
+            return false;
+        } else {
+            camera.setTarget(cameraTarget);
+            return true;
+        }
+    }
+
+    function alphaAdjustment() {
+        if (Math.abs(camera.alpha - cameraAlpha) > 0.02) {
+            var da = 0;
+            if (cameraAlpha > camera.alpha) {
+                da = 0.02;
+            } else {
+                da = -0.02;
+            }
+            camera.alpha = camera.alpha + da;
+            return false;
+        } else {
+            camera.alpha = cameraAlpha;
+            return true;
+        }
+    }
+
+    function betaAdjustment() {
+        if (Math.abs(camera.beta - cameraBeta) > 0.02) {
+            var da = 0;
+            if (cameraBeta > camera.beta) {
+                da = 0.02;
+            } else {
+                da = -0.02;
+            }
+            camera.beta = camera.beta + da;
+            return false;
+        } else {
+            camera.beta = cameraBeta;
+            return true;
+        }
+    }
+
+    function rotationAdjustment() {
+        var alphaDone = alphaAdjustment();
+        var betaDone = betaAdjustment();
+        return alphaDone && betaDone;
+    }
+
     scene.registerBeforeRender(function () {
         const viewport = camera.viewport.toGlobal(engine.getRenderWidth(), engine.getRenderHeight());
         leftButton.width = viewport.width/5 + "px";
@@ -161,20 +214,9 @@
         rightButton.height = viewport.width/10 + "px";
 
         if (cameraMoving) {
-            if (Math.abs(cameraTarget.x - camera.target.x) > 0.05) {
-                var dx = 0;
-                if (cameraTarget.x > camera.target.x) {
-                    dx = 0.05;
-                } else if (cameraTarget.x < camera.target.x) {
-                    dx = -0.05;
-                }
-                camera.setTarget(new BABYLON.Vector3(camera.target.x+dx,.5,-2));
-                camera.alpha = Math.PI / 2;
-                camera.beta = Math.PI * 3 / 8;
-            } else {
-                camera.setTarget(cameraTarget);
-                camera.alpha = Math.PI / 2;
-                camera.beta = Math.PI * 3 / 8;
+            var locationDone = locationAdjustment();
+            var rotationDone = rotationAdjustment();
+            if (locationDone && rotationDone) {
                 cameraMoving = false;
             }
         }
