resize configure button

--- a/index.html
+++ b/index.html
@@ -212,6 +212,8 @@
         leftButton.height = viewport.width/10 + "px";
         rightButton.width = viewport.width/5 + "px";
         rightButton.height = viewport.width/10 + "px";
+        configureButton.width = viewport.width/5 + "px";
+        configureButton.height = viewport.width/10 + "px";
 
         if (cameraMoving) {
             var locationDone = locationAdjustment();
