--- a/index.html
+++ b/index.html
@@ -58,15 +58,14 @@
     
     var car1;
     var car2;
+    var car2material;
     var car3;
-    var car4;
 
-    var index = 3;
+    var index = 0;
     var locations = [
-        -10,
-        -6,
+        2,
         -2,
-        2
+        -6
     ]
     var advancedTexture;
     var UiP;
@@ -105,6 +104,7 @@
     selectorCamera.attachControl(canvas, true);
 
     var light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), selectorScene);
+
     selectorScene.registerBeforeRender(function () {
         const viewport = selectorCamera.viewport.toGlobal(engine.getRenderWidth(), engine.getRenderHeight());
         UiPanel.heightInPixels = viewport.height/10 + 10;
@@ -144,7 +144,6 @@
                     if (car1) car1[0].setEnabled(true);
                     if (car2) car2[0].setEnabled(true);
                     if (car3) car3[0].setEnabled(true);
-                    if (car4) car4[0].setEnabled(true);
                     selectorScene.render();
                     break;
                 case 1:
@@ -152,10 +151,9 @@
                     selectorCamera.lowerAlphaLimit = -Math.PI / 4;
                     advancedTexture.dispose();
                     generateCustomizerGUI();
-                    if (index!=0) car1[0].setEnabled(false);
-                    if (index!=1) car2[0].setEnabled(false);
-                    if (index!=2) car3[0].setEnabled(false);
-                    if (index!=3) car4[0].setEnabled(false);
+                    if (index!=0 && car1) car1[0].setEnabled(false);
+                    if (index!=1 && car2) car2[0].setEnabled(false);
+                    if (index!=2 && car3) car3[0].setEnabled(false);
                     selectorScene.render();
                     break;
             }
@@ -181,7 +179,7 @@
         leftButton.background = "black";
         leftButton.onPointerDownObservable.add(()=> {
             if (!cameraMoving) {
-                index = Math.min(locations.length-1, index+1);
+                index = Math.max(0, index-1);
                 cameraTarget = new BABYLON.Vector3(locations[index],.5,-2);
                 cameraMoving = true;
             }
@@ -195,7 +193,7 @@
         rightButton.background = "black";
         rightButton.onPointerDownObservable.add(()=> {
             if (!cameraMoving) {
-                index = Math.max(0, index-1);
+                index = Math.min(locations.length-1, index+1);
                 cameraTarget = new BABYLON.Vector3(locations[index],.5,-2);
                 cameraMoving = true;
             }
@@ -268,30 +266,47 @@
     function setColor(color) {
         switch (index) {
             case 0:
-                var material = new BABYLON.StandardMaterial("blue", selectorScene);
-                material.diffuseColor = color;
-                car1[2].material = material;
-                car1[13].material = material;
+                var material = new BABYLON.PBRMetallicRoughnessMaterial("x1", selectorScene);
+                material.metallicFactor = 0.25;
+                material.roughnessFactor = 0.0;
+                material.doubleSided = true;
+                material.baseColor = color;
+                car1[1].material = material;
+                car1[22].material = material;
+                car1[46].material = material;
+                car1[73].material = material;
+                car1[87].material = material;
+                car1[101].material = material;
                 break;
             case 1:
-                var material = new BABYLON.StandardMaterial("blue", selectorScene);
-                material.diffuseColor = color;
-                car2[2].material = material;
-                material.backFaceCulling = false;
-                car2[15].material = material;
+                var material = new BABYLON.PBRMetallicRoughnessMaterial("x2", selectorScene);
+                material.baseColor = color;
+                material.roughnessFactor = 0.19999999999999996;
+                material.doubleSided = true;
+                car2[18].material = material;
+                car2[66].material = material;
+                car2[72].material = material;
+                car2[102].material = material;
+                car2[147].material = material;
+                car2[160].material = material;
+                car2[164].material = material;
+                car2[121].material = material;
                 break;
             case 2:
-                var material = new BABYLON.StandardMaterial("blue", selectorScene);
-                material.diffuseColor = color;
-                car3[1].material = material;
+                var material = new BABYLON.PBRMetallicRoughnessMaterial("x3", selectorScene);
+                material.roughnessFactor = 0.6;
+                material.doubleSided = true;
+                material.baseColor = color;
                 car3[2].material = material;
-                material.backFaceCulling = false;
-                car3[16].material = material;
-                break;
-            case 3:
-                var material = new BABYLON.StandardMaterial("blue", selectorScene);
-                material.diffuseColor = color;
-                car4[1].material = material;
+                car3[12].material = material;
+                car3[36].material = material;
+                car3[55].material = material;
+                car3[60].material = material;
+                car3[68].material = material;
+                car3[72].material = material;
+                car3[86].material = material;
+                car3[95].material = material;
+                car3[113].material = material;
                 break;
         }
     }
@@ -353,46 +368,34 @@
     
     function renderGarage() {
         BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/Wagisigu/babylon/main/Assets/Models/parking_garage_free_download/", "scene.gltf", selectorScene, function (meshes) {
-            renderCar4();
-        });
-    };
-
-    function renderCar1() {
-        BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/Wagisigu/babylon/main/Assets/Models/1953_cadillac_eldorado_convertible/", "scene.gltf", selectorScene, function (meshes) {
-            meshes[0].movePOV(locations[0],.75,-2);
-            meshes[0].scaling = new BABYLON.Vector3(.005, .005, .005);
-            meshes[0].rotate(new BABYLON.Vector3(0,1,0), Math.PI);
-            car1 = meshes;
-        });
-    };
-
-    function renderCar2() {
-        BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/Wagisigu/babylon/main/Assets/Models/1963_chevrolet_corvette_c2/", "scene.gltf", selectorScene, function (meshes) {
-            meshes[0].movePOV(locations[1],.3,-2);
-            meshes[0].scaling = new BABYLON.Vector3(.005, .005, .005);
-            meshes[0].rotate(new BABYLON.Vector3(0,1,0), Math.PI);
-            car2 = meshes;
             renderCar1();
         });
     };
 
-    function renderCar3() {
-        BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/Wagisigu/babylon/main/Assets/Models/1965_chevrolet_c10/", "scene.gltf", selectorScene, function (meshes) {
-            meshes[0].movePOV(locations[2],1.2,-2);
-            meshes[0].scaling = new BABYLON.Vector3(.005, .005, .005);
+    function renderCar1() {
+        BABYLON.SceneLoader.ImportMesh("", "Assets/Models/2019_chevrolet_corvette_c8_stingray/", "scene.gltf", selectorScene, function (meshes) {
+            meshes[0].movePOV(locations[0],0,-2);
             meshes[0].rotate(new BABYLON.Vector3(0,1,0), Math.PI);
-            car3 = meshes;
+            car1 = meshes;
             renderCar2();
         });
     };
 
-    function renderCar4() {
-        BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/Wagisigu/babylon/main/Assets/Models/1968_chevrolet_impala/", "scene.gltf", selectorScene, function (meshes) {
-            meshes[0].movePOV(locations[3],.175,-2);
-            meshes[0].scaling = new BABYLON.Vector3(.005, .005, .005);
+    function renderCar2() {
+        BABYLON.SceneLoader.ImportMesh("", "Assets/Models/2017_aston_martin_db11_5.2l_twin-turbo_v12/", "scene.gltf", selectorScene, function (meshes) {
+            meshes[0].movePOV(locations[1],0,-2);
             meshes[0].rotate(new BABYLON.Vector3(0,1,0), Math.PI);
-            car4 = meshes;
+            car2 = meshes;
             renderCar3();
+        });
+    };
+
+    function renderCar3() {
+        BABYLON.SceneLoader.ImportMesh("", "Assets/Models/2020_lamborghini_sian_fkp37_texture_reupload/", "scene.gltf", selectorScene, function (meshes) {
+            meshes[0].movePOV(locations[2],0,-2.2);
+            meshes[0].scaling = new BABYLON.Vector3(1.2,1.2,1.2);
+            meshes[0].rotate(new BABYLON.Vector3(0,1,0), Math.PI);
+            car3 = meshes;
         });
     };
 
