locally referenced garage

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     }
     
     function renderGarage() {
-        BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/Wagisigu/babylon/main/Assets/Models/parking_garage_free_download/", "scene.gltf", selectorScene, function (meshes) {
+        BABYLON.SceneLoader.ImportMesh("", "Assets/Models/parking_garage_free_download/", "scene.gltf", selectorScene, function (meshes) {
             renderCar1();
         });
     };
